fully refactired emb/cent/ind functions, added incremental updates

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 .venv/
 /.venv/Lib/
 /data/raw
-/data/embeddings
+/data/embeddings/embeddings.pkl
+/data/embeddings/per_image.npy
 /data/test
 /data/processed
 .conda/
