embs/cenrs/indxs done

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@
 .venv/
 /.venv/Lib/
 /data/raw
-/data/embeddings/embeddings.pkl
-/data/embeddings/per_image.npy
+/data/embeddings
 /data/indexes/image_index.faiss
 /data/test
 /data/processed
